# python-containers

./: .editorconfig  .envrc  .gitignore  .pre-commit-config.yaml  .relint.yml  Dockerfile  README.md  fabfile.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/linters/: .python-lint
.github/workflows/: build.yml  build_images.yml  lint.yml  super_linter.yml
container/: Dockerfile  requirements.txt
foo/: Dockerfile
vdirsyncer/: Dockerfile  requirements.txt
