[project]
name = "python-containers"
version = "0"
requires-python = ">= 3.12"

[tool.pip-tools]
allow-unsafe = true
generate-hashes = true
reuse-hashes = true
strip-extras = true

[tool.pylint.messages-control]
disable = [
  "missing-class-docstring",
  "missing-function-docstring",
  "missing-module-docstring",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
